--- a/src/com/toy/anagrams/ui/Anagrams.form
+++ b/src/com/toy/anagrams/ui/Anagrams.form
@@ -105,7 +105,7 @@
             <Property name="labelFor" type="java.awt.Component" editor="org.netbeans.modules.form.ComponentChooserEditor">
               <ComponentRef name="guessedWord"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Your Guess:"/>
+            <Property name="text" type="java.lang.String" value="Dit g&#xe6;t:"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
